# technical-renaissance

./: .justfile  README.md  README.org  default.nix  devenv.nix  pyproject.toml
nix/: module.nix  package.nix
npins/: sources.json
src/technical_renaissance/: __init__.py  app.py  config.toml
src/technical_renaissance/static/: org.css
src/technical_renaissance/templates/: index.html
templates/: index.html
