[project]
name = "technical-renaissance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "cashmere", email = "cashmere@autistici.org" }
]
requires-python = ">=3.13"
dependencies = [
    "robyn[templating]>=0.86.0",
]

[project.scripts]
technical-renaissance = "technical_renaissance:app"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[tool.pyrefly]
python-interpreter = ".devenv/state/venv/bin/python"
